--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -49,8 +49,8 @@
     <aries-blueprint-proxy-version>1.0.0</aries-blueprint-proxy-version>
     <aries-blueprint-proxy-impl-version>1.0.1</aries-blueprint-proxy-impl-version>
     <aries-util-version>1.1.0</aries-util-version>
-    <arquillian-junit-container-version>1.0.0.CR7</arquillian-junit-container-version>
-    <arquillian-weld-ee-embedded-version>1.0.0.CR3</arquillian-weld-ee-embedded-version>
+    <arquillian-junit-container-version>1.1.8.Final</arquillian-junit-container-version>
+    <arquillian-weld-se-embedded-version>1.0.0.CR8</arquillian-weld-se-embedded-version>
     <asm-bundle-version>3.3.1_1</asm-bundle-version>
     <asm-version>3.3.1</asm-version>
     <aspectj-version>1.8.6</aspectj-version>
