--- a/components/camel-bam/pom.xml
+++ b/components/camel-bam/pom.xml
@@ -186,10 +186,12 @@
               <dependency>
                 <groupId>org.apache.camel</groupId>
                 <artifactId>camel-core</artifactId>
+                <version>${project.version}</version>
               </dependency>
               <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-orm</artifactId>
+                <version>${spring-version}</version>
               </dependency>
             </dependencies>
           </plugin>
