manifest update for camel-cdi

--- a/components/camel-cdi/pom.xml
+++ b/components/camel-cdi/pom.xml
@@ -45,6 +45,11 @@
     <camel.osgi.provide.capability>
       org.ops4j.pax.cdi.extension; extension=camel-cdi-extension
     </camel.osgi.provide.capability>
+    <camel.osgi.require.capability>
+      osgi.extender;filter:="(osgi.extender=pax.cdi)",
+      org.ops4j.pax.cdi.extension;filter:="(extension=deltaspike-core-api)",
+      org.ops4j.pax.cdi.extension;filter:="(extension=camel-cdi-extension)"
+    </camel.osgi.require.capability>
   </properties>
 
   <dependencies>
