--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -386,6 +386,7 @@
     <osgi-version>4.3.1</osgi-version>
     <paho-version>1.0.2</paho-version>
     <paranamer-bundle-version>2.6_1</paranamer-bundle-version>
+    <pax-cdi-version>1.0.0.RC1</pax-cdi-version>
     <pax-exam-version>4.5.0</pax-exam-version>
     <pax-tiny-bundle-version>1.3.1</pax-tiny-bundle-version>
     <pax-logging-version>1.8.1</pax-logging-version>
