--- a/components/camel-mustache/pom.xml
+++ b/components/camel-mustache/pom.xml
@@ -71,7 +71,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <skipTests>true</skipTests>
+              <skipTests>false</skipTests>
             </configuration>
           </plugin>
         </plugins>
