--- a/components/pom.xml
+++ b/components/pom.xml
@@ -223,6 +223,7 @@
     <module>camel-swagger</module>
     <module>camel-tagsoup</module>
     <module>camel-twitter</module>
+    <module>camel-undertow</module>
     <module>camel-univocity-parsers</module>
     <module>camel-urlrewrite</module>
     <module>camel-velocity</module>
