--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -792,6 +792,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-undertow</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-univocity-parsers</artifactId>
     </dependency>
     <dependency>
