--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1538,6 +1538,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-undertow</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-univocity-parsers</artifactId>
         <version>${project.version}</version>
       </dependency>
