[CAMEL-8948] Move aries.proxy before aries.blueprint bundles for correct ordering
(cherry picked from commit ab845909b0daac83509eaf5c38aca3f774c73a5d)

--- a/components/camel-test-blueprint/pom.xml
+++ b/components/camel-test-blueprint/pom.xml
@@ -64,6 +64,16 @@
         <!-- the ordering of the dependencies can matter as we load the dependencies from the classpath
              with pojosr, and you may get a weird error if wrong order -->
         <dependency>
+            <groupId>org.apache.aries.proxy</groupId>
+            <artifactId>org.apache.aries.proxy.api</artifactId>
+            <version>${aries-blueprint-proxy-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.aries.proxy</groupId>
+            <artifactId>org.apache.aries.proxy.impl</artifactId>
+            <version>${aries-blueprint-proxy-impl-version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.aries.blueprint</groupId>
             <artifactId>org.apache.aries.blueprint.api</artifactId>
         </dependency>
