--- a/pom.xml
+++ b/pom.xml
@@ -239,6 +239,14 @@
                 <exclude>**/test_rsa*</exclude>
                 <exclude>**/examples/*/src/**/data/**/*.xml</exclude>
                 <exlucde>**/*.log</exlucde>
+                <exclude>**/dependency-reduced-pom.xml</exclude>
+                <exclude>**/camel-grape/src/main/resources/org/apache/camel/component/grape/grape.json</exclude>
+                <exclude>**/Dropbox_API_Terms_and_Conditions.txt</exclude>
+                <exclude>**/camel-salesforce/camel-salesforce-component/MerchandiseRestResource.apxc</exclude>
+                <exclude>tooling/archetypes/camel-archetype-api-component/src/main/resources/archetype-resources/__artifactId__-component/signatures/file-sig-api.txt</exclude>
+                <exclude>tooling/archetypes/camel-archetype-scr/src/main/resources/archetype-resources/src/main/resources/default.properties</exclude>
+                <exclude>tooling/archetypes/camel-archetype-spring-boot/src/main/resources/archetype-resources/src/main/resources/application.yml</exclude>
+                <exclude>tooling/archetypes/camel-archetype-web/src/main/resources/archetype-resources/src/main/webapp/index.html</exclude>
               </excludes>
             </configuration>
           </plugin>
