--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -869,6 +869,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-git</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-github</artifactId>
         <version>${project.version}</version>
       </dependency>
