--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -251,7 +251,11 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-geocoder</artifactId>
     </dependency>
-     <dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-git</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-github</artifactId>
     </dependency>
