--- a/components/camel-git/pom.xml
+++ b/components/camel-git/pom.xml
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>org.eclipse.jgit</groupId>
       <artifactId>org.eclipse.jgit</artifactId>
-      <version>4.0.1.201506240215-r</version>
+      <version>${jgit-version}</version>
     </dependency>
 
     <!-- testing -->
