--- a/components/camel-test-spring/src/test/resources/log4j.properties
+++ b/components/camel-test-spring/src/test/resources/log4j.properties
@@ -20,8 +20,7 @@
 #
 log4j.rootLogger=INFO, file
 
-log4j.logger.org.springframework=WARN
-#log4j.logger.org.apache.camel=DEBUG
+log4j.logger.org.apache.camel.test.spring=DEBUG
 #log4j.logger.org.apache.camel.test.junit4=DEBUG
 
 # CONSOLE appender not used by default
@@ -34,4 +33,4 @@ log4j.appender.out.layout.ConversionPattern=[%30.30t] %-30.30c{1} %-5p %m%n
 log4j.appender.file=org.apache.log4j.FileAppender
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d %-5p %c{1} - %m %n
-log4j.appender.file.file=target/camel-spring-test.log
+log4j.appender.file.file=target/camel-test-spring.log
