--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -251,7 +251,7 @@
     <jaxb-bundle-version>2.2.6_1</jaxb-bundle-version>
     <jaxen-version>1.1.6</jaxen-version>
     <jboss-javaee-6-version>1.0.0.Final</jboss-javaee-6-version>
-    <jboss-logging-version>3.1.4.GA</jboss-logging-version>
+    <jboss-logging-version>3.3.0.Final</jboss-logging-version>
     <jboss-marshalling-version>1.4.10.Final</jboss-marshalling-version>
     <jclouds-version>1.9.0</jclouds-version>
     <!-- jclouds must use this guava version -->
