--- a/components/camel-spring/src/test/resources/log4j.properties
+++ b/components/camel-spring/src/test/resources/log4j.properties
@@ -20,10 +20,10 @@
 #
 log4j.rootLogger=INFO, file
 
-log4j.logger.org.springframework=WARN
+#log4j.logger.org.springframework=WARN
 #log4j.logger.org.apache.camel.impl.converter=WARN
-log4j.logger.org.apache.camel.management=WARN
-log4j.logger.org.apache.camel.impl.DefaultPackageScanClassResolver=WARN
+#log4j.logger.org.apache.camel.management=WARN
+#log4j.logger.org.apache.camel.impl.DefaultPackageScanClassResolver=WARN
 
 #log4j.logger.org.apache.camel=DEBUG
 #log4j.logger.org.apache.camel.spring=DEBUG
