--- a/components/pom.xml
+++ b/components/pom.xml
@@ -45,6 +45,7 @@
     <module>camel-bam</module>
     <module>camel-groovy</module>
     <module>camel-scala</module>
+    <module>camel-http-common</module>
     <module>camel-http</module>
     <module>camel-http4</module>
     <module>camel-jetty-common</module>
