--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -317,6 +317,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-http-common</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-http4</artifactId>
     </dependency>
     <dependency>
