--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -961,6 +961,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-http-common</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-http4</artifactId>
         <version>${project.version}</version>
       </dependency>
