--- a/components/camel-http-common/pom.xml
+++ b/components/camel-http-common/pom.xml
@@ -33,7 +33,7 @@
     <camel.osgi.import.before.defaults>
       javax.servlet.*;version="${servlet-version-range}"
     </camel.osgi.import.before.defaults>
-    <camel.osgi.export.pkg>org.apache.camel.http.*</camel.osgi.export.pkg>
+    <camel.osgi.export.pkg>org.apache.camel.http.common.*</camel.osgi.export.pkg>
   </properties>
 
   <dependencies>
@@ -45,11 +45,6 @@
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-servlet_3.0_spec</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-codec</groupId>
-      <artifactId>commons-codec</artifactId>
     </dependency>
 
     <!-- testing -->
