--- a/components/camel-restlet/pom.xml
+++ b/components/camel-restlet/pom.xml
@@ -75,7 +75,12 @@
 
     <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-jetty8</artifactId>
+      <artifactId>camel-jetty9</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-http</artifactId>
       <scope>test</scope>
     </dependency>
 
