--- a/components/camel-coap/pom.xml
+++ b/components/camel-coap/pom.xml
@@ -68,6 +68,11 @@
       <artifactId>camel-test</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-jetty9</artifactId>
+        <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
