--- a/components/camel-sip/pom.xml
+++ b/components/camel-sip/pom.xml
@@ -42,10 +42,10 @@
 	      	<groupId>org.apache.camel</groupId>
 	      	<artifactId>camel-core</artifactId>
 	    </dependency>   
-        <dependency>
-	      	<groupId>org.apache.servicemix.specs</groupId>
-	      	<artifactId>org.apache.servicemix.specs.jain-sip-api-1.2</artifactId>
-	      	<version>${servicemix-specs-version}</version>
+            <dependency>
+	      	<groupId>org.opentelecoms.sip</groupId>
+	      	<artifactId>sip-api-1.2</artifactId>
+	      	<version>${sip-api-version}</version>
 	    </dependency>
 	    <dependency>
 	      	<groupId>org.apache.servicemix.bundles</groupId>
