--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -431,6 +431,7 @@
     <servlet-api-3.0-version>1.0</servlet-api-3.0-version>
     <servlet-version-range>[2.5,4)</servlet-version-range>
     <shiro-version>1.2.3</shiro-version>
+    <sip-api-version>1.1</sip-api-version>
     <!-- use slf4j-api 1.6.x to be easy compatible with older Camel releases -->
     <slf4j-api-version>1.6.6</slf4j-api-version>
     <slf4j-version>1.7.12</slf4j-version>
