[CAMEL-9028] BOM does not export scala-library

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2155,6 +2155,12 @@
       </dependency>
 
       <dependency>
+        <groupId>org.scala-lang</groupId>
+        <artifactId>scala-library</artifactId>
+        <version>${scala-version}</version>
+      </dependency>
+      
+      <dependency>
         <groupId>javax.annotation</groupId>
         <artifactId>jsr250-api</artifactId>
         <version>1.0</version>
