CAMEL-9038: Make the existing tests of camle-olingo2 automatically executable

--- a/components/camel-olingo2/camel-olingo2-component/src/test/resources/test-options.properties
+++ b/components/camel-olingo2/camel-olingo2-component/src/test/resources/test-options.properties
@@ -15,5 +15,5 @@
 # limitations under the License.
 #
 # Test values for Olingo configuration properties
-serviceUri=http://localhost:8080/MyFormula.svc
+#serviceUri=http://localhost:8080/MyFormula.svc
 contentType=application/json;charset=utf-8
