CAMEL-9090: change scope to test for cxf-rt-features-clustering

--- a/components/camel-cxf/pom.xml
+++ b/components/camel-cxf/pom.xml
@@ -188,6 +188,7 @@
 		<groupId>org.apache.cxf</groupId>
 		<artifactId>cxf-rt-features-clustering</artifactId>
 		<version>${cxf-version}</version>
+                <scope>test</scope>
 	</dependency>
     
     <dependency>
