New component created for integration with jBPM

--- a/components/pom.xml
+++ b/components/pom.xml
@@ -130,6 +130,7 @@
     <module>camel-javaspace</module>
     <module>camel-jaxb</module>
     <module>camel-jasypt</module>
+    <module>camel-jbpm</module>
     <module>camel-jclouds</module>
     <module>camel-jcr</module>
     <module>camel-jdbc</module>
