--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -365,6 +365,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-jbpm</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-jclouds</artifactId>
     </dependency>
     <dependency>
