--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -252,6 +252,7 @@
     <javax-mail-version>1.4.7</javax-mail-version>
     <jaxb-bundle-version>2.2.6_1</jaxb-bundle-version>
     <jaxen-version>1.1.6</jaxen-version>
+    <jbpm-version>6.2.0.Final</jbpm-version>
     <jboss-javaee-6-version>1.0.0.Final</jboss-javaee-6-version>
     <jboss-logging-version>3.3.0.Final</jboss-logging-version>
     <jboss-marshalling-version>1.4.10.Final</jboss-marshalling-version>
@@ -461,7 +462,7 @@
     <spring-version-range>[3.2,5)</spring-version-range>
     <!-- However, spring-dm does not support spring 4.x so import-range must be 3.x for the -->
     <!-- Karaf features file. -->
-    <spring-version-range-karaf>[3.2,4)</spring-version-range-karaf>
+    <spring-version-range-karaf>[3.0,4)</spring-version-range-karaf>
     <spring-version>${spring4-version}</spring-version>
     <spring32-version>3.2.13.RELEASE</spring32-version>
     <spring40-version>4.0.9.RELEASE</spring40-version>
@@ -1008,6 +1009,11 @@
       <dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-jaxb</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-jbpm</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
