Upgrade c3p0 dependency to 0.9.5.1.

--- a/components/camel-quartz2/pom.xml
+++ b/components/camel-quartz2/pom.xml
@@ -56,7 +56,7 @@
       <version>${quartz2-version}</version>
     </dependency>
     <dependency>
-      <groupId>c3p0</groupId>
+      <groupId>com.mchange</groupId>
       <artifactId>c3p0</artifactId>
       <version>${c3p0-version}</version>
     </dependency>
