Upgrade Stringtemplate and related bundle to version 4.0.8 and changed artifactId from stringtemplate to ST4

--- a/components/camel-stringtemplate/pom.xml
+++ b/components/camel-stringtemplate/pom.xml
@@ -43,7 +43,7 @@
     </dependency>
     <dependency>
       <groupId>org.antlr</groupId>
-      <artifactId>stringtemplate</artifactId>
+      <artifactId>ST4</artifactId>
       <version>${stringtemplate-version}</version>
     </dependency>
 
