[CAMEL-9121] activemq-camel pulls in outdated version of commons-pool2

--- a/components/camel-jms/pom.xml
+++ b/components/camel-jms/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>geronimo-jms_1.1_spec</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- testing -->
         <dependency>
