--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1865,6 +1865,13 @@
         <version>${abdera-version}</version>
       </dependency>
 
+      <!-- commons dependencies -->
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-pool2</artifactId>
+        <version>${commons-pool2-version}</version>
+      </dependency>
+      
       <!-- cxf dependencies -->
       <dependency>
         <groupId>org.apache.cxf</groupId>
