CAMEL-9120: Add Camel-Undertow to Camel features

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -256,6 +256,7 @@
     <jboss-javaee-6-version>1.0.0.Final</jboss-javaee-6-version>
     <jboss-logging-version>3.3.0.Final</jboss-logging-version>
     <jboss-marshalling-version>1.4.10.Final</jboss-marshalling-version>
+    <jboss-xnio-version>3.3.1.Final</jboss-xnio-version>
     <jclouds-version>1.9.1</jclouds-version>
     <!-- jclouds must use this guava version -->
     <jclouds-google-guava-version>16.0.1</jclouds-google-guava-version>
