CAMEL-9097 XSLT Aggregation Strategy. Thanks to Ranil Wijeyratne.
This closes #598.

--- a/camel-core/pom.xml
+++ b/camel-core/pom.xml
@@ -169,6 +169,13 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- for xslt tests -->
+    <dependency>
+      <groupId>net.sf.saxon</groupId>
+      <artifactId>Saxon-HE</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <!-- validator -->
     <dependency>
       <groupId>xml-resolver</groupId>
