CAMEL-7800: camel-swagger-java - work in progress

--- a/components/camel-swagger-java/src/test/resources/log4j.properties
+++ b/components/camel-swagger-java/src/test/resources/log4j.properties
@@ -18,11 +18,11 @@
 #
 # The logging properties used for testing.
 #
-log4j.rootLogger=INFO, out
+log4j.rootLogger=INFO, file
 
 # uncomment the following to enable camel debugging
-#log4j.logger.org.apache.camel.component.swagger=TRACE
-#log4j.logger.com.wordnik.swagger=DEBUG
+#log4j.logger.org.apache.camel.swagger=TRACE
+#log4j.logger.io.swagger=DEBUG
 
 # CONSOLE appender not used by default
 log4j.appender.out=org.apache.log4j.ConsoleAppender
