CAMEL-7800: camel-swagger-java example

--- a/apache-camel/pom.xml
+++ b/apache-camel/pom.xml
@@ -748,6 +748,10 @@
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
+      <artifactId>camel-swagger-java</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.camel</groupId>
       <artifactId>camel-sql</artifactId>
     </dependency>
     <dependency>
