--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1524,6 +1524,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.camel</groupId>
+        <artifactId>camel-swagger-java</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.camel</groupId>
         <artifactId>camel-tagsoup</artifactId>
         <version>${project.version}</version>
       </dependency>
